tests/invalid/test7.var
var x = 5;
x = 5 & 3;
